force-app/main/default/objects/ActionPlan__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>Action__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>