force-app/main/default/objects/ActionPlan__c/fields/ActionPlanTemplate__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Template</label>
    <referenceTo>ActionPlanTemplate__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>ActionPlans</relationshipName>
    <type>Lookup</type>
</CustomField>