force-app/main/default/objects/ActionPlan__c/fields/CopyFromTemplate__c.field-meta.xml
<CustomField>
    <fullName>CopyFromTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, copies any data and Action Plan Template Tasks from an Action Plan Template into a new Action Plan, if the &apos;Action Plan Template&apos; field is set.</description>
    <label>Copy From Template</label>
    <type>Checkbox</type>
</CustomField>