force-app/main/default/objects/ActionPlan__c/fields/LinkedListing_hz__c.field-meta.xml
<CustomField>
    <fullName>LinkedListing_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Listing</label>
    <referenceTo>LinkedListing_hz__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>