force-app/main/default/objects/ActionPlan__c/fields/Listing_hz__c.field-meta.xml
<CustomField>
    <fullName>Listing_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>Listing_hz__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>