force-app/main/default/objects/ActionPlan__c/fields/PropertyMedia__c.field-meta.xml
<CustomField>
    <fullName>PropertyMedia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Media</label>
    <referenceTo>PropertyMedia__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>