force-app/main/default/objects/ActionPlan__c/fields/SkipWeekends__c.field-meta.xml
<CustomField>
    <fullName>SkipWeekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Weekends</label>
    <type>Checkbox</type>
</CustomField>