force-app/main/default/objects/ActionPlan__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <label>Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>