force-app/main/default/objects/ActionPlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <columns>Listing_hz__c</columns>
    <columns>Offer_hz__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>My Action Plans</label>
</ListView>