force-app/main/default/objects/ActionPlan__c/listViews/All_Action_Plans.listView-meta.xml
<ListView>
    <fullName>All_Action_Plans</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Action Plans</label>
</ListView>